crates/turborepo-turbo-json/src/snapshots/turborepo_turbo_json__tests__deserialize_boundaries-2.snap
---
source: crates/turborepo-turbo-json/src/lib.rs
expression: raw_task_definition
---
{
  "tags": [
    "my-tag"
  ],
  "dependencies": null,
  "dependents": null
}
