crates/turborepo-turbo-json/src/snapshots/turborepo_turbo_json__tests__deserialize_boundaries.snap
---
source: crates/turborepo-turbo-json/src/lib.rs
expression: raw_task_definition
---
{
  "tags": null,
  "dependencies": null,
  "dependents": null
}
