crates/turborepo-turbo-json/src/snapshots/turborepo_turbo_json__tests__empty_tags.snap
---
source: crates/turborepo-turbo-json/src/lib.rs
expression: raw_boundaries_config
---
{
  "tags": {}
}
