crates/turborepo-turbo-json/src/snapshots/turborepo_turbo_json__tests__implicit_dependencies.snap
---
source: crates/turborepo-turbo-json/src/lib.rs
expression: raw_boundaries_config
---
{
  "implicit_dependencies": [
    "my-package"
  ]
}
