crates/turborepo-turbo-json/src/snapshots/turborepo_turbo_json__tests__tags_and_dependencies.snap
---
source: crates/turborepo-turbo-json/src/lib.rs
expression: raw_boundaries_config
---
{
  "tags": {
    "my-tag": {
      "dependencies": {
        "allow": [
          "my-package"
        ]
      }
    }
  }
}
