crates/turborepo-turbo-json/src/snapshots/turborepo_turbo_json__tests__tags_and_dependents.snap
---
source: crates/turborepo-turbo-json/src/lib.rs
expression: raw_boundaries_config
---
{
  "tags": {
    "my-tag": {
      "dependents": {
        "allow": [
          "my-package"
        ],
        "deny": [
          "my-other-package"
        ]
      }
    }
  }
}
