crates/turborepo-turbo-json/src/snapshots/turborepo_turbo_json__tests__two_tags.snap
---
source: crates/turborepo-turbo-json/src/lib.rs
expression: json.tags
---
[
  "my-tag",
  "my-other-tag"
]
